# cell_type_constellations

./: pyproject.toml
notebooks/: constellation_from_geojson.ipynb
notebooks/scratch/: .gitignore
scripts/: plot_bg.py  plot_spinal_cord.py  serialize_bg_aligned.py  serialize_spinal_cord.py  spinal_cord_colors.json
src/cell_type_constellations/app/: html_utils.py  page_utils.py
src/cell_type_constellations/cells/: cell_set.py
src/cell_type_constellations/cli/: visualization_app.py
src/cell_type_constellations/geojson/: geojson_api.py  geojson_plotting.py  geojson_utils.py
src/cell_type_constellations/hulls/: classes.py  creation.py  merger_utils.py
src/cell_type_constellations/mixture_matrix/: mixture_matrix_generator.py
src/cell_type_constellations/plotting/: bezier.py  plotting_api.py
src/cell_type_constellations/rendering/: rendering_api.py  rendering_utils.py
src/cell_type_constellations/serialization/: ingestion.py  serialization.py
src/cell_type_constellations/umap/: plot_utils.py
src/cell_type_constellations/utils/: coord_utils.py  str_utils.py
src/cell_type_constellations/visual_elements/: centroid.py  connection.py  fov.py
tests/fov/: test_fov.py
tests/plotting/: test_bezier.py
tests/svg/: test_hull_utils.py
tests/utils/: test_geometry.py  test_str_utils.py
