[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cell_type_constellations"
version = "0.0.1"
description = "prototype tools for generating constellation plots"
dependencies = [
    "abc_atlas_access @ git+https://github.com/AllenInstitute/abc_atlas_access",
    "anndata",
    "cherrypy",
    "geojson",
    "h5py",
    "jupyter",
    "matplotlib",
    "numpy",
    "scipy",
    "pandas",
    "pytest",
    "pyzmq==26.4.0",
    "cell_type_mapper @ git+https://github.com/AllenInstitute/cell_type_mapper@v1.4.0"
]
requires-python = ">=3.8"
authors = [
  {name = "Scott Daniel", email = "scott.daniel@allenintitute.org"},
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
